<resources>
    <string name="app_name">ViewsLayoutsResources</string>
    <string name="some_help">Need some help?</string>
    <string name="getting_started"><b>Getting Started</b></string>
    <string name="welcome_back">Welcome back, glad to see you again</string>
    <string name="user_name">Username or email</string>
    <string name="psw">Password</string>
    <string name="remind">Remind me later</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with">Or continue with</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup">Sign up here</string>
    <string name="back_button_desc">back button</string>
</resources>