<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/header_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button_desc"
                android:paddingHorizontal="20dp"
                app:srcCompat="@drawable/back"
                app:tint="@color/txt_color_light" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/some_help"
                android:textColor="@color/txt_color_light" />
        </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        android:fillViewport="true"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="1">
        <LinearLayout
            android:id="@+id/layoutBody"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg_color"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/login_logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/getting_started"
                android:textColor="@color/txt_color_light"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/welcome_back"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/field"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <ImageButton
                    android:id="@+id/startUsernameBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/start_username"
                    app:tint="@color/txt_color" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:paddingHorizontal="5dp"
                    android:textColorHint="@color/txt_color" />

                <ImageButton
                    android:id="@+id/endUsernameBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/end_username"
                    app:tint="@color/green" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/field"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <ImageButton
                    android:id="@+id/startPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/lock"
                    app:tint="@color/txt_color" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/psw"
                    android:inputType="textPassword"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/txt_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">

                <TextView
                    android:id="@+id/remind"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/remind"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    app:thumbTint="@drawable/switch_thumb_selector"
                    app:trackTint="@drawable/switch_track_selector" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/signin_btn"
                android:text="@string/sign_in"
                android:textColor="@color/txt_color_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/txt_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:text="@string/continue_with" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/txt_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_button"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/circle_button"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/google" />

                <ImageButton
                    android:id="@+id/btnApple"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle_button"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/apple" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/txt_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/signup"
                    android:textColor="@color/signup_color" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>